--- a/public/css/landing-a2df9d.webflow.css
+++ b/public/css/landing-a2df9d.webflow.css
@@ -886,7 +886,7 @@ p {
     width: 100%;
     padding-top: 20px;
     padding-bottom: 20px;
-    text-align: center;
+    text-align: left;
   }
   .wrap-2 {
     margin-top: 30px;
