--- a/public/css/landing-a2df9d.webflow.css
+++ b/public/css/landing-a2df9d.webflow.css
@@ -726,6 +726,50 @@ p {
   color: #01ce71;
 }
 
+.no-underline{
+  text-decoration: none;
+}
+
+.text-brand{
+  color:#4a90e2;
+}
+
+.button-list{
+  display:flex;
+  flex-wrap:wrap;
+  margin-left:-5px;
+  margin-right:-5px;
+  margin-bottom:15px;
+}
+
+.button{
+  color:#FFF;
+  background-color: #4a90e2;
+  text-decoration:none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 300px;
+  background-color: #8aa9ef;
+  font-family: Nunito, sans-serif;
+}
+
+.button-list .button{
+  margin-left:5px;
+  margin-right:5px;
+}
+
 .btn {
   text-decoration:none;
   display: -webkit-box;
