update wallet buttons

--- a/public/css/landing-a2df9d.webflow.css
+++ b/public/css/landing-a2df9d.webflow.css
@@ -849,6 +849,11 @@ p {
   font-family: Nunito, sans-serif;
 }
 
+.btn.natrium {
+  background-color: #A3CDFF;
+}
+
+
 .btn.nanovault {
   background-color: #fff;
   text-decoration: none;
