--- a/public/css/landing-a2df9d.webflow.css
+++ b/public/css/landing-a2df9d.webflow.css
@@ -796,7 +796,7 @@ p {
 
 .button-faucet{
   color:#FFF;
-  background-color: #ff4f3f;
+  background-color: #1d1e22;
   text-decoration:none;
   display: -webkit-box;
   display: -webkit-flex;
