--- a/public/css/landing-a2df9d.webflow.css
+++ b/public/css/landing-a2df9d.webflow.css
@@ -813,7 +813,7 @@ p {
   -ms-flex-align: center;
   align-items: center;
   border-radius: 300px;
-  background-color: #ff4f3f;
+  background-color: #1d1e22;
   font-family: Nunito, sans-serif;
 }
 
